resume preview images added